.ci/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vision
  labels:
    app: vision
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vision
  template:
    metadata:
      labels:
        app: vision
    spec:
      containers:
        - name: vision
          image: registry.gitlab.com/libvision/vision:<VERSION>
          imagePullPolicy: Always
