.ci/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "vision"
spec:
  selector:
    app: "vision"
  ports:
    - name: web
      port: 5555
      targetPort: 5555
