.ci/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vision
  labels:
    app: vision
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vision
  template:
    metadata:
      labels:
        app: vision
    spec:
      containers:
        - name: vision
          image: vnmntn/vision:<VERSION>
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: vision
spec:
  selector:
    app: vision
  ports:
    - name: web
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vision
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
      #more_set_headers "Access-Control-Allow-Origin: api.vnmntn.com";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST,
      OPTIONS, DELETE, PATCH
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx # required
  rules:
    - host: api.vnmntn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vision
                port:
                  number: 80
